# ChangeLog for net-misc/xsupplicant
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/xsupplicant/ChangeLog,v 1.12 2007/04/28 17:04:12 swegener Exp $

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> xsupplicant-1.0.ebuild,
  xsupplicant-1.0.1.ebuild:
  Fix *initd, *confd and *envd calls (#17388, #174266)

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  27 Mar 2006; Luis Medinas <metalgod@gentoo.org> xsupplicant-1.2.2.ebuild:
  Added ~amd64 keyword. Closes bug #122294.

  14 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  xsupplicant-1.2.2.ebuild:
  Allow compiling with USE=-gsm, bug #118885.

*xsupplicant-1.2.2 (13 Jan 2006)

  13 Jan 2006; Henrik Brix Andersen <brix@gentoo.org>
  +files/xsupplicant-1.2.2-conf.d, +files/xsupplicant-1.2.2-init.d,
  +xsupplicant-1.2.2.ebuild:
  Version bump, fixes bug #81338 and bug #100680 (If you use this package,
  please consider contributing a solution to bug #98253).

  19 Feb 2005; Michael Hanselmann <hansmi@gentoo.org>
  xsupplicant-1.0.1.ebuild:
  Added to ~ppc, bug 82391.

  30 Jan 2005; Daniel Black <dragonheart@gentoo.org> xsupplicant-0.8b.ebuild:
  Transition dependancy from net-libs/libpcap to virtual/libpcap

*xsupplicant-1.0 (09 Jan 2005)

  09 Jan 2005; Henrik Brix Andersen <brix@gentoo.org>
  +files/xsupplicant.conf.d, +files/xsupplicant.init.d,
  +xsupplicant-1.0.1.ebuild, +xsupplicant-1.0.ebuild:
  Version bump + development version. Fixes bug #44737 and bug #61981.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  12 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> xsupplicant-0.8b.ebuild:
  Fix cvs header.

*xsupplicant-0.8b (07 Mar 2004)

  07 Mar 2004; Peter Johanson <latexer@gentoo.org> metadata.xml,
  xsupplicant-0.8b.ebuild:
  Initial import. Thanks to Pau Oliva <pau@eslack.org> for the ebuild. bug #34194
