@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>mobile</herd>
-<maintainer>
-  <email>latexer@gentoo.org</email>
-</maintainer>
+	<herd>mobile</herd>
 </pkgmetadata>
