@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/xsupplicant
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/xsupplicant/ChangeLog,v 1.12 2007/04/28 17:04:12 swegener Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/xsupplicant/ChangeLog,v 1.13 2008/03/12 14:17:26 phreak Exp $
+
+  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Peter Johanson (latexer, #206688) from metadata.xml.
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> xsupplicant-1.0.ebuild,
   xsupplicant-1.0.1.ebuild:
